// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator renders correctly horizontally 1`] = `
<DocumentFragment>
  .cache-1944blf-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
}

<hr
    aria-orientation="horizontal"
    class="eoti1h20 cache-1944blf-StyledHr"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly vertically 1`] = `
<DocumentFragment>
  .cache-x3g1dw-StyledHr {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
}

<hr
    aria-orientation="vertical"
    class="eoti1h20 cache-x3g1dw-StyledHr"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with custom color 1`] = `
<DocumentFragment>
  .cache-1uh368b-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #4f0599;
}

<hr
    aria-orientation="horizontal"
    class="eoti1h20 cache-1uh368b-StyledHr"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon 1`] = `
<DocumentFragment>
  .cache-1wmhier-StyledIcon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-2zljfb-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1wrsyoi-StyledIcon-sizeStyles {
  fill: #d4dae7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1wrsyoi-StyledIcon-sizeStyles.cache-1wrsyoi-StyledIcon-sizeStyles {
  vertical-align: middle;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
    aria-orientation="horizontal"
    class="eoti1h21 cache-1wmhier-StyledIcon"
    role="separator"
  >
    <hr
      class="eoti1h20 cache-2zljfb-StyledHr"
    />
    <svg
      class="sc-ui-icon etwatq50 cache-1wrsyoi-StyledIcon-sizeStyles"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
        style="transform: rotate(-90deg); transform-origin: 50% 50%;"
      />
    </svg>
    <hr
      class="eoti1h20 cache-2zljfb-StyledHr"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon horizontally 1`] = `
<DocumentFragment>
  .cache-1wmhier-StyledIcon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-2zljfb-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1wrsyoi-StyledIcon-sizeStyles {
  fill: #d4dae7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1wrsyoi-StyledIcon-sizeStyles.cache-1wrsyoi-StyledIcon-sizeStyles {
  vertical-align: middle;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
    aria-orientation="horizontal"
    class="eoti1h21 cache-1wmhier-StyledIcon"
    role="separator"
  >
    <hr
      class="eoti1h20 cache-2zljfb-StyledHr"
    />
    <svg
      class="sc-ui-icon etwatq50 cache-1wrsyoi-StyledIcon-sizeStyles"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
        style="transform: rotate(-90deg); transform-origin: 50% 50%;"
      />
    </svg>
    <hr
      class="eoti1h20 cache-2zljfb-StyledHr"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon vertically 1`] = `
<DocumentFragment>
  .cache-1rsc2u0-StyledIcon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1h73ptp-StyledHr {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1wrsyoi-StyledIcon-sizeStyles {
  fill: #d4dae7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1wrsyoi-StyledIcon-sizeStyles.cache-1wrsyoi-StyledIcon-sizeStyles {
  vertical-align: middle;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
    aria-orientation="vertical"
    class="eoti1h21 cache-1rsc2u0-StyledIcon"
    role="separator"
  >
    <hr
      class="eoti1h20 cache-1h73ptp-StyledHr"
    />
    <svg
      class="sc-ui-icon etwatq50 cache-1wrsyoi-StyledIcon-sizeStyles"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
        style="transform: rotate(-90deg); transform-origin: 50% 50%;"
      />
    </svg>
    <hr
      class="eoti1h20 cache-1h73ptp-StyledHr"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom thickness 1`] = `
<DocumentFragment>
  .cache-o9gaed-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 3px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
}

<hr
    aria-orientation="horizontal"
    class="eoti1h20 cache-o9gaed-StyledHr"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-1944blf-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e6e9f0;
}

<hr
    aria-orientation="horizontal"
    class="eoti1h20 cache-1944blf-StyledHr"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with raw color 1`] = `
<DocumentFragment>
  .cache-8f8z62-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #121212;
}

<hr
    aria-orientation="horizontal"
    class="eoti1h20 cache-8f8z62-StyledHr"
    role="separator"
  />
</DocumentFragment>
`;
